# CodeSmiths

./: README.md  agents.md  context.md  demo_server.py  index.html  package-lock.json  package.json  plan.md  tailwind.config.js  test_citations.py  test_embeddings.py  test_graph_expansion.py  test_graph_rag.py  test_neo4j.py  test_qdrant.py
backend/: .gitignore  architecture.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/brain/: company_brain_architecture.md  dependency_graph.py  interface.py  models.py  orchestrator.py  pipeline.py  registry.py  workflow.py
backend/citations/: README.md  __init__.py  citation_architecture.md  citation_builder.py  interface.py  models.py  provenance.py  service.py  source_tracker.py
backend/embeddings/: README.md  chunk_pipeline.py  document_pipeline.py  embeddings_architecture.md  interface.py  models.py  provider.py  qdrant_client.py  service.py
backend/evaluation/: README.md  answer_metrics.py  benchmark_runner.py  citation_metrics.py  evaluation_architecture.md  interface.py  latency_metrics.py  models.py  retrieval_metrics.py  service.py
backend/graph/: README.md  entity_extractor.py  graph_builder.py  graph_storage.py  interface.py  knowledge_graph_architecture.md  models.py  neo4j_adapter.py  relationship_extractor.py  service.py
backend/rag/: README.md  context_builder.py  graph_expander.py  graph_rag_architecture.md  interface.py  models.py  orchestrator.py  prompt_builder.py  service.py  synthesis.py
backend/rerank/: README.md  __init__.py  interface.py  service.py
(+226 files in other folders)
