[tool.poetry]
name = "ai-company-brain-backend"
version = "0.1.0"
description = "Enterprise Knowledge Platform Backend"
authors = ["AI Company Brain Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.3"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
celery = "^5.4.0"
redis = "^5.0.6"
python-multipart = "^0.0.9"
pypdf = "^4.2.0"
python-docx = "^1.1.2"
markdown = "^3.6"
pyjwt = "^2.8.0"
cryptography = "^42.0.8"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
